[gd_scene load_steps=8 format=3 uid="uid://ch8wd7u2vdpo2"]

[ext_resource type="Script" path="res://Actors/player/player_hand.gd" id="1_al0dq"]
[ext_resource type="Texture2D" uid="uid://drk1wmxapptaf" path="res://Sprites/UI/Building Ui/hand.png" id="2_ahkjf"]
[ext_resource type="Resource" uid="uid://cc5ujc1dc164u" path="res://Crafting/Resources/BluePrints/Generator.tres" id="2_d1nkh"]
[ext_resource type="Script" path="res://Actors/player/check_ground.gd" id="4_3sp5y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4i2vg"]
size = Vector2(1, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_a11u2"]
light_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_crke7"]
size = Vector2(16, 16)

[node name="PlayerHand" type="Area2D"]
z_index = 50
script = ExtResource("1_al0dq")
building_res = ExtResource("2_d1nkh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4i2vg")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1.5, 1.5, 1.5, 1)
z_index = 1
position = Vector2(-2, 7)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_ahkjf")
hframes = 2
vframes = 2

[node name="BuildingPlacement" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="BuildingPlacement"]
modulate = Color(0, 1, 0, 0.588235)
material = SubResource("CanvasItemMaterial_a11u2")

[node name="check_ground" type="Area2D" parent="." node_paths=PackedStringArray("player_hand")]
collision_layer = 0
collision_mask = 128
script = ExtResource("4_3sp5y")
player_hand = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="check_ground"]
shape = SubResource("RectangleShape2D_crke7")

[connection signal="area_entered" from="check_ground" to="." method="_on_check_ground_area_entered"]
[connection signal="area_exited" from="check_ground" to="." method="_on_check_ground_area_exited"]
